tests/query_errors/pipeline_name_overlap/error.txt
Error: 
    9 | end;
   10 | create pipeline add;
   11 | create script add;
      | ^^^^^^^^^^^^^^^^^ Name `add` is already in use for another node, please use another name.